tests/machine/x/go/right_join.error
Error on line 0: run error: exit status 1
--- Right Join using syntax ---
panic: interface conversion: interface {} is main.OrdersItem, not map[string]interface {}

goroutine 1 [running]:
main.main()
	/workspace/mochi/tests/machine/x/go/right_join.go:114 +0x7eb
exit status 2

1: //go:build ignore
